[gd_scene load_steps=6 format=2]

[ext_resource path="res://TorchPuzzle.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="BoxShape" id=4]

[node name="TorchPuzzle" type="StaticBody"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.5, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="Riddle" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 2 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.78873, 0 )
text = "G6"

[node name="ChessBoard" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.75, 0, 0, 0, 1, 2, -0.25, 0 )
mesh = SubResource( 3 )

[node name="ChessBoardCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 2, -0.5, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[node name="IfCompleteTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="IfCompleteTimer" to="." method="_on_IfCompleteTimer_timeout"]
